--- a/index.html
+++ b/index.html
@@ -1,16 +1,21 @@
 <html>
-  <head>
-    <script src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.js"></script>
-    <script src="js/Tone.js"></script>
-    <script src="js/script.js"></script>
-    <style>
-    body {
-        margin: 0;
-    }
-    </style>
-  </head>
-  <body>
-    <main>
-    </main>
-  </body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/2.4.3/webcomponents-bundle.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.js"></script>
+        <script src="./js/Tone.js"></script>
+        <script src="./js/tone-ui.js"></script>
+        <script src="./js/components.js"></script>
+        <style>
+        body {
+            margin: 0;
+        }
+        </style>
+    </head>
+    <body id="content">
+        <tone-play-toggle></tone-play-toggle>
+        <!-- Load this here after DOM ready -->
+        <script src="js/script.js"></script>
+    </body>
 </html>
