Add samples, start work on synth, using teoria temporarily at least

--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/2.4.3/webcomponents-bundle.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.js"></script>
         <script src="./js/Tone.js"></script>
-        <script src="./js/tone-ui.js"></script>
-        <script src="./js/components.js"></script>
+        <script src="./js/teoria.js"></script>
+        <script src="./js/synths.js"></script>
         <style>
         body {
             margin: 0;
         }
         </style>
     </head>
-    <body id="content">
-        <tone-play-toggle></tone-play-toggle>
+    <main>
+    </main>
         <!-- Load this here after DOM ready -->
         <script src="js/script.js"></script>
     </body>
