Tree structure for history now fully working, interface needed

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <script src="./js/Tone.js"></script>
         <script src="./js/teoria.js"></script>
         <script src="./js/synths.js"></script>
+        <script src="./js/dataTree.min.js"></script>
         <script src="./js/logger.js"></script>
         <style>
         body {
