--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+        <link rel="stylesheet" type="text/css" href="style.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/2.4.3/webcomponents-bundle.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.js"></script>
         <script src="./js/components.js"></script>
@@ -10,14 +11,35 @@
         <script src="./js/synths.js"></script>
         <script src="./js/dataTree.min.js"></script>
         <script src="./js/logger.js"></script>
-        <style>
-        body {
-            margin: 0;
-        }
-        </style>
     </head>
-    <main>
-    </main>
+    <body>
+        <div class="window">
+            <div class="window-contents">
+                <h1>Help</h1>
+                <h2>What is this?</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Integer nec odio. Praesent libero. Sed cursus ante dapibus
+                diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet.
+                Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed
+                augue semper porta. Mauris massa. Vestibulum lacinia arcu eget
+                nulla. </p>
+
+                <h2>Controls</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Integer nec odio. Praesent libero. Sed cursus ante dapibus
+                diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet.
+                Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed
+                augue semper porta. Mauris massa. Vestibulum lacinia arcu eget
+                nulla. </p>
+            </div>
+        </div>
+
+        <!-- Create a button for user help page -->
+        <main>
+            <!-- If I click this the help menu should stay open -->
+            <button class="help button-style">?</button>
+        </main>
+
         <!-- Load this here after DOM ready -->
         <script src="js/script.js"></script>
     </body>
