Fix for smaller screens again

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             href="https://tonejs.github.io/">Tone.js</a>.
 
                 <h2>Controls</h2>
-                <img style="width: 100%; border:none;" src="./images/blankkeyboard.png">
+                <img  src="./images/blankkeyboard.png">
                 <div class="keylist">
                     <div><span class="key">W</span> - Move up </div>
                     <div><span class="key">S</span> - Move down </div>
