--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <link rel="stylesheet" type="text/css" href="style.css">
+        <!-- External Libraries -->
         <script src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.js"></script>
-        <script src="./js/components.js"></script>
-        <script src="./js/Tone.js"></script>
-        <script src="./js/teoria.js"></script>
-        <script src="./js/synths.js"></script>
         <script src="./js/dataTree.min.js"></script>
+        <script src="./js/Tone.js"></script>
+
+        <!-- My Files -->
+        <script src="./js/components.js"></script>
+        <script src="./js/synths.js"></script>
         <script src="./js/logger.js"></script>
     </head>
     <body>
