--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
 
                 <h3>Audio</h3>
                 <p>In the bottom right a volume slider and a mute button are provided.</p>
+                
+                <p>If audio doesn't play try pressing the space bar or using Firefox</p>
             </div>
         </div>
         <button class="help button-style">?</button>
